# etdtransform

./: .buildinfo  .gitignore  .pre-commit-config.yaml  README.md  config_test_template.yaml  genindex.html  index.html  load_data.py  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: deploy.yml
_modules/: index.html
_modules/etdtransform/: aggregate.html  calculated_columns.html  impute.html  knmi.html  load_data.html  vectorized_impute.html
_sources/: index.rst.txt
docs/: build.bat  conf.py  index.rst
docs/source/: etdtransform.rst  modules.rst
etdtransform/: __init__.py  _config.py  aggregate.py  calculated_columns.py  impute.py  knmi.py  load_data.py  settings.py  vectorized_impute.py
source/: etdtransform.html  modules.html
tests/: conftest.py  test_helpers.py  test_total_imputation_workflow.py  test_vectorized_impute.py
tests/data/: metadata_avg_diffs.json  metadata_household_15min.json  metadata_household_24h.json  metadata_household_5min.json  metadata_household_60min.json  metadata_household_6h.json  metadata_household_aggregated_diff.json  metadata_household_calculated.json  metadata_household_default.json  metadata_household_diff_max_bounds.json  metadata_household_imputed.json  metadata_impute_gap_stats.json  metadata_impute_summary_household.json  metadata_impute_summary_project.json  metadata_project_15min.json  metadata_project_24h.json  metadata_project_5min.json  metadata_project_60min.json  metadata_project_6h.json  sample_avg_diffs.parquet  sample_household_15min.parquet  sample_household_24h.parquet  sample_household_5min.parquet  sample_household_60min.parquet  sample_household_6h.parquet  sample_household_aggregated_diff.parquet  sample_household_calculated.parquet  sample_household_default.parquet  sample_household_diff_max_bounds.parquet  sample_household_imputed.parquet  sample_impute_gap_stats.parquet  sample_impute_summary_household.parquet  sample_impute_summary_project.parquet  sample_project_15min.parquet  sample_project_24h.parquet  sample_project_5min.parquet  sample_project_60min.parquet  sample_project_6h.parquet
